Fix search bar wrapping when window is minimized
Search bar no longer moves when window is shrunk.

--- a/styles.css
+++ b/styles.css
@@ -111,8 +111,10 @@ ul {
 }
 
 .header-left {
-    gap: 30px;
+    column-gap: 1rem;
     padding-left: 1rem;
+    display: grid;
+    grid-template: 1rem / repeat(2, 1rem);
 }
 
 .search-img {
@@ -121,7 +123,13 @@ ul {
 }
 
 .search {
-    background-color: rgba(128, 128, 128, 0.406);
+    background-color: rgba(115, 124, 191, 0.235);
     border: none;
     border-radius: 15px;
+    width: clamp(16rem, 20rem ,25rem);
+    height: 1.5rem;
+}
+
+.notification-icon {
+    padding-right: .1rem;
 }
